# hse-pipelines-course

./: .gitignore
dz3/: Cargo.toml  report.md
dz3/benches/: bench_analytics.rs  bench_append.rs  bench_archive.rs  bench_base.rs  bench_fullscan.rs  bench_trivial.rs  bench_write.rs
dz3/report0/Analytical Query (Group By + Agg)/CSV/base/: sample.json  tukey.json
dz3/report0/Analytical Query (Group By + Agg)/CSV/new/: estimates.json
dz3/report0/Analytical Query (Group By + Agg)/CSV/report/: index.html
dz3/report0/Analytical Query (Group By + Agg)/JSONL/base/: estimates.json  sample.json  tukey.json
dz3/report0/Analytical Query (Group By + Agg)/JSONL/new/: benchmark.json
dz3/report0/Analytical Query (Group By + Agg)/JSONL/report/: index.html
dz3/report0/Analytical Query (Group By + Agg)/report/: index.html
dz3/report0/File IO Performance/CSV/base/: estimates.json  (+2 more)
dz3/report0/report/: index.html
dz3/report1-singlethreaded/Analytical Query (Group By + Agg)/report/: index.html
dz3/report1-singlethreaded/Compression Speed (Write Time)/report/: index.html
dz3/report1-singlethreaded/File IO Performance/report/: index.html
dz3/report1-singlethreaded/min-max-sum Performance/report/: index.html
dz3/report1-singlethreaded/report/: index.html
dz3/report1/Append Operation (1 Row)/report/: index.html
dz3/report1/Write (Serialization) Speed/report/: index.html
dz3/report1/fullscan/report/: index.html
dz3/src/: main.rs
dz3/test/: Yermolayev_Maxim_DZ2.md
final/generator/: Cargo.toml  Dockerfile
final/generator/src/: dist.rs  main.rs  session.rs
(+10373 files in other folders)
