[package]
name = "dz3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
polars = { version = "0.53.0", features = ["lazy", "parquet", "csv", "json", "avro", "dtype-datetime", "strings"] }
criterion = { version = "0.8.2" }
csv = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# [[bench]]
# name = "bench_base"
# harness = false

# [[bench]]
# name = "bench_trivial"
# harness = false

# [[bench]]
# name = "bench_analytics"
# harness = false

# [[bench]]
# name = "bench_write"
# harness = false

# [[bench]]
# name = "bench_append"
# harness = false

# [[bench]]
# name = "bench_archive"
# harness = false

[[bench]]
name = "bench_fullscan"
harness = false
