[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
aws-config     = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3     = "1"
aws-credential-types = "1"
rand           = "0.8"
rand_distr     = "0.4"
encoding_rs    = "0.8"
uuid           = { version = "1", features = ["v4"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
chrono         = "0.4"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
